# video-background-remover-cli

./: .gitignore  CHANGELOG.md  README.ja.md  README.md  README.pypi.md  main.py  pyproject.toml  requirements.txt  webui.py
.github/workflows/: deploy-docs.yml  publish-pypi.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: style.css
docs/en/: index.md
docs/en/guide/: examples.md  getting-started.md  models.md  releases.md  usage.md
docs/guide/: articles.md  examples.md  getting-started.md  models.md  releases.md  usage.md
docs/guide/articles/: v0-3-0-gradio-webui.md
docs/ja/: index.md
docs/ja/guide/: articles.md  examples.md  getting-started.md  models.md  releases.md  usage.md
docs/ja/guide/articles/: v0-3-0-gradio-webui.md
experiments/onizuka_fire_motion/: README.md  experiment_config.json  run_experiment.py
scripts/: sync_version.py
src/: __init__.py  bg_remover.py
src/video_background_remover_cli/: __init__.py  bg_remover.py  cli.py  matanyone_bridge.py  matanyone_import_worker.py  webui.py
src/video_background_remover_cli/background_removal/: __init__.py  examples.py  models.py  options.py  service.py
tests/: test_cli.py  test_cli_run.py  test_sync_version.py  test_webui.py
