[project]
name = "video-background-remover-cli"
version = "0.1.0"
description = "Remove background from video using RMBG-1.4"
requires-python = ">=3.10"
dependencies = [
    "rembg>=2.0.50",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
    "onnxruntime>=1.16.0",
]
